--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width">
+  <meta
+  name="description"           
+  content="Corona Dashboard bzw Corona Karte Deutschlands basierend auf den offiziellen RKI Daten.
+  Versucht das offizielle RKI Dashboard nachzubilden aber dabei besonders schnell und 
+  nutzerfreundlich zu sein.">
+  <title>Corona Dashboard</title>
 	<link rel="stylesheet" href="./web_modules/leaflet/dist/leaflet.css"/>
 	<link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
 	<header class="page-header">
     <button class="fork-me" onclick="document.location.href='https://github.com/t-animal/covid-karte'">
-      <img src="git-branch.svg"> me on <img src="logo-github.svg">
+      <img src="git-branch.svg" alt="fork me"> me on <img src="logo-github.svg" alt="github logo">
     </button>
 
 		<h1>Ein performantes COVID-19-Dashboard</h1>
-    Kann <s>nicht mehr</s> (derzeit?) weniger als das <a href="https://experience.arcgis.com/experience/478220a4c454480e823b17327b2bf1d4/page/page_1/">RKI-Dashboard</a>, aber schneller.
+    Kann <s>nicht mehr</s> (derzeit?) weniger als das <a href="https://corona.rki.de">RKI-Dashboard</a>, aber schneller.
 	</header>
 
 	<main>
