Add permalink to map overlay

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<h2>COVID-19-Fälle der letzten 7 Tage/100.000 Einwohner</h2>
 			<div class="map"></div>
 			<aside class="county-info">
-				<header><div class="close-icon"></div></header>
+				<header><a class="label permalink">Permalink</a><div class="spacer"></div><div class="close-icon"></div></header>
 				<div>
 					<h3></h3>
 					<table>
