Render newly reported cases and reported cases differnet

--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
 					<canvas></canvas>
 				</div>
 
+				<div class="chart-labels">
+					<div class="chart-label by-first-sickday"></div><span class="label">Stand gestern</span>
+					<div class="chart-label by-notificationday"></div><span class="label">Neu übermittelt</span>
+				</div>
+
 				<span class="label">* Gesamtplus der Fälle zum Vortag verteilt sich auf versch. Tage (orangene Balken) aufgrund des Übermittlungsprozesses.</span>
 			</section>
 
