--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
 	<header class="page-header">
     <button class="fork-me" onclick="document.location.href='https://github.com/t-animal/covid-karte'">
-      <img src="git-branch.svg" alt="fork me"> me on <img src="logo-github.svg" alt="github logo">
+      <img src="assets/git-branch.svg" alt="fork me"> me on <img src="assets/logo-github.svg" alt="github logo">
     </button>
 
 		<h1>Ein performantes COVID-19-Dashboard</h1>
