Add last seven days per 100k to county row

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,9 @@
 		<section class="counties">
 			<h2>Auswahl pro Landkreis</h2>
 			<span class="label">
-				(<span class="label cases">Covid-19-Fälle</span> | <span class="label deaths">Todesfälle</span>)
+        ( <span>Letzte 7d/100k Einwohner</span> |
+          <span class="label cases">Covid-19-Fälle</span> |
+          <span class="label deaths">Todesfälle</span>)
 			</span>
 			<div class="scroll-container">
 				<table class="county-list"></table>
