Add sorting of county table

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,14 @@
           <span class="label deaths">Todesfälle</span>)
 			</span>
 			<div class="scroll-container">
-				<table class="county-list"></table>
+				<table class="county-list">
+          <tr class="sort-row">
+            <td><span class="sort sorted sorted-desc"></span></td>
+            <td><span class="sort"></span></td>
+            <td><span class="sort"></span></td>
+            <td><span class="sort"></span></td>
+          </tr>
+        </table>
 			</div>
 		</section>
 
