Make table header sticky while scrolling

--- a/src/index.html
+++ b/src/index.html
@@ -64,10 +64,10 @@
 			<div class="scroll-container">
 				<table class="county-list">
           <tr class="sort-row">
-            <td><span class="sort sorted sorted-desc"></span></td>
-            <td><span class="sort"></span></td>
-            <td><span class="sort"></span></td>
-            <td><span class="sort"></span></td>
+            <th><span class="sort sorted sorted-desc"></span></th>
+            <th><span class="sort"></span></th>
+            <th><span class="sort"></span></th>
+            <th><span class="sort"></span></th>
           </tr>
         </table>
 			</div>
