Add info about software and data used

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,13 @@
       Als Datenquelle dient wie beim Corona Dashboard des RKI der <a href="https://npgeo-corona-npgeo-de.hub.arcgis.com/">
       NPGEO Corona Hub</a>. Die Daten stehen unter Open Data Datenlizenz Deutschland – Namensnennung – Version 2.0.
       Quellenvermerk: Robert Koch-Institut (RKI), dl-de/by-2-0.
+        
+      <h3>Lizenzen, Open Source</h3>
+      Berliner Geodaten (CC-BY) <a href="https://github.com/m-hoerz/berlin-shapes">M-Hoerz</a> <br/>
+      Bundesländer und Kreise Geodaten ("Unlicense") <a href="https://github.com/isellsoap/deutschlandGeoJSON">isellsoap</a> <br />
+      Die Karte wird gerendert mit <a href="https://leafletjs.com/">Leaflet</a> (BSD-2-Clause) <br />
+      Die charts werden gerendert mit <a href="https://www.chartjs.org/">chart.js</a> (MIT) <br />
+      Als Schriftart verwende ich <a href="https://fonts.google.com/specimen/Rubik">Rubik</a> (Open Font License)
 
       <h3>Datenschutz</h3>
       Diese Seite verwendet keine Cookies, keine Trackingdienste oder sonstigen Unfug. Unter Umständen werden Zugriffe 
