Make language more understandable

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <img src="assets/git-branch.svg" alt="fork me"> me on <img src="assets/logo-github.svg" alt="github logo">
     </button>
 
-		<h1>Ein performantes COVID-19-Dashboard</h1>
+		<h1>Ein schnelles COVID-19-Dashboard</h1>
     Kann <s>nicht mehr</s> (derzeit?) weniger als das <a href="https://corona.rki.de">RKI-Dashboard</a>, aber schneller. |
     <a href="javascript:document.querySelector('.page-info').classList.remove('hidden');"><span class="symbol">✉</span> Kontakt und weitere Infos</a> | 
     <a href="javascript:document.querySelector('.settings').classList.remove('hidden');"><span class="symbol">⚙</span> Einstellungen</a>.
