Add help wanted hint

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,10 @@
 		<h1>Ein schnelles COVID-19-Dashboard</h1>
     Kann <s>nicht mehr</s> (derzeit?) weniger als das <a href="https://corona.rki.de">RKI-Dashboard</a>, aber schneller. |
     <a href="javascript:document.querySelector('.page-info').classList.remove('hidden');"><span class="symbol">✉</span> Kontakt und weitere Infos</a> | 
-    <a href="javascript:document.querySelector('.settings').classList.remove('hidden');"><span class="symbol">⚙</span> Einstellungen</a>.
+    <a href="javascript:document.querySelector('.settings').classList.remove('hidden');"><span class="symbol">⚙</span> Einstellungen</a> |
+    <span class="help"><span style="font-weight: bold; color: #844">Hilfe!</span> Ich suche die Daten
+    <a href="https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/917fc37a709542548cc3be077a786c17_0">dieser API</a>
+    im zeitlichen Verlauf. Hat irgendwer diese Daten gescraped? => Mail unter "Kontakt"!</span>
   </header>
   
   <aside class="page-info info-overlay hidden" onclick="this.classList.add('hidden')">
