Fix chart labels

--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,8 @@
 
 				<div class="chart-labels">
 					<div class="chart-label by-first-sickday"></div><span class="label">Erkrankungsbeginn</span>
-					<div class="chart-label by-notificationday"></div><span class="label">Meldedatum</span>
+          <div class="chart-label by-notificationday"></div><span class="label">Meldedatum</span>
+          <span class="label">Grafik erlaubt zoomen mit Mausrad.</span>
 				</div>
 
 				<span class="label">* Bei Fällen ohne Angaben zum Erkrankungsbeginn (Erkrankungsbeginn unbekannt bzw. Fälle ohne Symptome)
@@ -179,8 +180,9 @@
 				</div>
 
 				<div class="chart-labels">
-					<div class="chart-label by-first-sickday"></div><span class="label">Stand gestern</span>
-					<div class="chart-label by-notificationday"></div><span class="label">Neu übermittelt</span>
+					<div class="chart-label last-reported"></div><span class="label">Stand gestern</span>
+          <div class="chart-label newly-reported"></div><span class="label">Neu übermittelt</span>
+          <span class="label">Grafik erlaubt zoomen mit Mausrad.</span>
 				</div>
 
 				<span class="label">* Gesamtplus der Fälle zum Vortag verteilt sich auf versch. Tage (orangene Balken) aufgrund des Übermittlungsprozesses.</span>
