Decrease opacity of not updated sections

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
   </aside>
 
 	<main>
-		<section class="counties">
+		<section class="counties not-animatable">
 			<h2>Auswahl pro Landkreis</h2>
 			<span class="label">
         ( <span>Letzte 7d/100k Einwohner</span> |
@@ -126,7 +126,7 @@
       </aside>
 		</section>
 
-		<section class="cases-section summed-section">
+		<section class="cases-section summed-section not-animatable">
 			<h2>Covid-19-Fälle</h2>
 			<span class="daily-sum cases">&nbsp;</span>
 			<div class="daily-sum secondary-info cases no-data">aus total <span>&nbsp;</span></div> 
@@ -137,7 +137,7 @@
 			<span class="label">zum Vortag</span>
 		</section>
 
-		<section class="deaths-section summed-section">
+		<section class="deaths-section summed-section not-animatable">
 			<h2>Covid-19-Todesfälle</h2>
 			<span class="daily-sum deaths">&nbsp;</span>
 			<div class="daily-sum secondary-info deaths no-data">aus total <span>&nbsp;</span></div> 
@@ -155,7 +155,7 @@
 			Keine Garantien für Richtigkeit der hier dargestellten Daten.
 		</section>
 
-		<div class="development-graphs navigatable">
+		<div class="development-graphs navigatable not-animatable">
 			<section class="new-cases-per-day-section active">
 				<h2>COVID-19-Fälle/Tag nach Erkrankungsbeginn, ersatzweise Meldedatum*</h2>
 				<div class="canvas-resize-container">
