Add history animation

--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,24 @@
       </aside>
 		</section>
 
+		<section class="animation-control">
+			<h2>
+				Animation
+				<span class="label">(lädt einmalig einige Megabyte Daten!)</span>
+			</h2>
+			<div class="animation-controls-row">
+				<button class="animation-control-start">Animation starten</button>
+				<button class="animation-control-stop">Animation pausieren</button>
+				<div class="spacer"></div>
+				<button class="animation-control-last-week">-7 Tage</button>
+				<button class="animation-control-prev">«</button>
+				<input type="range" min="0" max="0" disabled class="animation-control-range"/>
+				<button class="animation-control-next">»</button>
+				<button class="animation-control-next-week">+7 Tage</button>
+				<button class="animation-control-today">Heute</button>
+			</div>
+		</section>
+
 		<section class="cases-section summed-section not-animatable">
 			<h2>Covid-19-Fälle</h2>
 			<span class="daily-sum cases">&nbsp;</span>
@@ -143,7 +161,7 @@
 			<div class="daily-sum secondary-info deaths no-data">aus total <span>&nbsp;</span></div> 
 
 			<span class="daily-diff deaths">&nbsp;</span>
-			<div class="daily-diff secondary-info deaths no-data">aus total <span>&nbsp;</span></div> 
+			<div class="daily-diff secondary-info deaths no-data">aus total <span>&nbsp;</span></div>
 
 			<span class="label">zum Vortag</span>
 		</section>
