Add precaching hint to map

--- a/src/index.html
+++ b/src/index.html
@@ -142,6 +142,9 @@
 				<button class="animation-control-next-week">+7 Tage</button>
 				<button class="animation-control-today">Heute</button>
 			</div>
+
+			<div class="animation-caching-hint"></div>
+
 		</section>
 
 		<section class="cases-section summed-section not-animatable">
