Remove dev helpers

--- a/src/index.html
+++ b/src/index.html
@@ -135,12 +135,16 @@
 				<button class="animation-control-start">Animation starten</button>
 				<button class="animation-control-stop">Animation pausieren</button>
 				<div class="spacer"></div>
+				<div class="animation-control-text"></div>
+				<div class="spacer"></div>
 				<button class="animation-control-last-week">-7 Tage</button>
 				<button class="animation-control-prev">«</button>
-				<input type="range" min="0" max="0" disabled class="animation-control-range"/>
 				<button class="animation-control-next">»</button>
 				<button class="animation-control-next-week">+7 Tage</button>
 				<button class="animation-control-today">Heute</button>
+			</div>
+			<div class="animation-controls-row">
+				<div class="animation-control-range" />
 			</div>
 
 			<div class="animation-caching-hint"></div>
