Fix html of preloading hint

--- a/src/index.html
+++ b/src/index.html
@@ -144,10 +144,10 @@
 				<button class="animation-control-today">Heute</button>
 			</div>
 			<div class="animation-controls-row">
-				<div class="animation-control-range" />
+				<div class="animation-control-range"></div>
 			</div>
 
-			<div class="animation-caching-hint"></div>
+			<div class="animation-caching-hint">&nbsp;</div>
 
 		</section>
 
