Allow interpolation of colors on the map

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,13 @@
       <h3>Settings</h3>
       <h4>Legende</h4>
       <form class="settings-form">
+        <label for="labelScheme">Farbschema</label><br />
         <input class="setting" type="radio" name="labelScheme" value="RKI" /> RKI (Einfach) <br />
         <input class="setting" type="radio" name="labelScheme" value="RiskLayer" /> RiskLayer (Feingranular) <br />
+        <br />
+        <label for="interpolate">Farbinterpolation</label><br />
+        <input class="setting" type="radio" name="interpolate" value="None" /> Keine <br />
+        <input class="setting" type="radio" name="interpolate" value="Linear" /> Lineare Interpolation <br />
       </form>
       
     </div>
