Add a speed dial for the animation

--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,13 @@
 				<div class="spacer"></div>
 				<div class="animation-control-text"></div>
 				<div class="spacer"></div>
+        <select class="animation-speed">
+          <option value="0">maximal</option>
+          <option value="50">schneller</option>
+          <option value="100">schnell</option>
+          <option value="300">langsam</option>
+          <option value="500">langsamer</option>
+        </select>
 				<button class="animation-control-last-week">-7 Tage</button>
 				<button class="animation-control-prev">«</button>
 				<button class="animation-control-next">»</button>
