Add seven day incidence display

--- a/src/index.html
+++ b/src/index.html
@@ -158,6 +158,12 @@
 
 		</section>
 
+		<section class="seven-day-incidence-section summed-section not-animatable">
+			<h2>7-Tages-Inzidenz</h2>
+			<span class="seven-day-incidence">&nbsp;</span>
+			<div class="seven-day-incidence secondary-info no-data">aus total <span>&nbsp;</span></div> 
+		</section>
+
 		<section class="cases-section summed-section not-animatable">
 			<h2>Covid-19-Fälle</h2>
 			<span class="daily-sum cases">&nbsp;</span>
