Use 7 days incidence more widely as it's shorter

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 		<section class="counties not-animatable">
 			<h2>Auswahl pro Landkreis</h2>
 			<span class="label">
-        ( <span>Letzte 7d/100k Einwohner</span> |
+        ( <span>7-Tages-Inzidenz</span> |
           <span class="label cases">Covid-19-Fälle</span> |
           <span class="label deaths">Todesfälle</span>)
 			</span>
@@ -103,7 +103,7 @@
 		</section>
 
 		<section class="map-section">
-			<h2>COVID-19-Fälle der letzten 7 Tage/100.000 Einwohner</h2>
+			<h2>COVID-19-Fälle der letzten 7 Tage/100.000 Einwohner (7-Tages-Inzidenz)</h2>
 			<div class="map"></div>
 			<aside class="county-info">
 				<header><a class="label permalink">Permalink</a><div class="spacer"></div><div class="close-icon"></div></header>
