Add bundesnotbremse color scheme

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,12 @@
         <label for="labelScheme">Farbschema</label><br />
         <input class="setting" type="radio" name="labelScheme" value="RKI" /> RKI (Einfach) <br />
         <input class="setting" type="radio" name="labelScheme" value="RiskLayer" /> RiskLayer (Feingranular) <br />
+        <input class="setting" type="radio" name="labelScheme" value="Bundesnotbremse" /> Bundesnotbremse <br />
+
+        <br />
+        Das Farbschema "Bundesnotbremse" kann u.U. in der Zukunft angepasst werden, wenn neue politische Maßnahmen oder
+        Diskussionen aufkommen.
+        <br />
         <br />
         <label for="interpolate">Farbinterpolation</label><br />
         <input class="setting" type="radio" name="interpolate" value="None" /> Keine <br />
