--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,10 @@
       auf dem Server protokolliert und dabei kann deine IP gespeichert werden sowie Basisinformationen über dein
       System wie zB dein Browser. Diese Daten werden nicht mit anderen Daten verknüpft und dienen lediglich der 
       Sicherstellung des Betriebs.
+    <h3>Impressum</h3>
+<img src="./assets/impressum.png" alt="Impressum" style="width: 100%; max-width: 5cm" />
     </div>
+
   </aside>
   
   <aside class="settings info-overlay hidden">
